Create REST API Master Item Source
